tests/lean/scan_test2.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
a
Error (line: 7, pos: 0) Command expected
